--- a/k8s_deployment_service.yaml
+++ b/k8s_deployment_service.yaml
@@ -41,6 +41,7 @@ spec:
   - port: 8080
     protocol: TCP
     targetPort: 8080
+    nodePort: 30000
   selector:
     app: devsecops
   type: NodePort
