--- a/k8s_deployment_service.yaml
+++ b/k8s_deployment_service.yaml
@@ -29,6 +29,9 @@ spec:
           runAsNonRoot: true
           runAsUser: 100
           readOnlyRootFilesystem: true
+      imagePullSecrets:
+        - name: regcred
+        
 ---
 apiVersion: v1
 kind: Service
