--- a/k8s_PROD-deployment_service.yaml
+++ b/k8s_PROD-deployment_service.yaml
@@ -34,6 +34,8 @@ spec:
           runAsNonRoot: true
           readOnlyRootFilesystem: true
           allowPrivilegeEscalation: false
+      imagePullSecrets:
+        - name: regcred    
         
 ---
 apiVersion: v1
